<resources>
    <string name="app_name">Train Wiser</string>
    <string name="title_activity_aipersonal_trainer">AIPersonalTrainerActivity</string>
    <string name="ai_personal_trainer">AI Personal trainer</string>
    <string name="race_training_plan">Race training plan</string>
    <string name="predict_your_results">Predict your race results</string>
    <string name="signup_on_login_activity">IF YOU DON\'T HAVE AN ACCOUNT,\nCLICK HERE TO JOIN</string>
    <string name="log_in_text">LOG IN</string>
    <string name="last_name">Last name</string>
    <string name="birth_date">Birth date <i>(YYYY-MM-DD format)</i></string>
    <string name="first_name">First name</string>
    <string name="sign_up">SIGN UP</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="username">Username</string>
    <string name="logout">Logout</string>
    <string name="connect_with_strava">Connect your \nStrava account</string>
    <string name="strava_account_connected">Strava account \nconnected</string>
    <string name="disconnect_from_strava">Disconnect your\nStrava account</string>
    <string name="profile">Profile</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="delete_your_account">DELETE YOUR ACCOUNT</string>
    <string name="background">background</string>
    <string name="default_password_text">********</string>
    <string name="monthly_training_log">Training statistics</string>
    <string name="predict_button_text">Predict race time</string>
    <string name="predicted_time_according_to_races_in_serbia">Predicted time according to\nyour race results in Serbia:</string>
    <string name="predict_race_time">PREDICT RACE TIME</string>
    <string name="next_road_race_dist">Your next road race distance:</string>
    <string name="next_road_race_distance">Your next road race distance:</string>
    <string name="race_goal_time">Goal time:</string>
    <string name="race_distance">Race distance:</string>
    <string name="year">Year:     </string>
    <string name="month">"Month: "</string>
    <string name="hh_mm_ss">hh:mm:ss</string>
    <string name="suggest_trainings">Get training plan</string>
    <string name="username_label">Username:</string>
    <string name="email_label">E-mail:</string>
    <string-array name="race_distances">
        <item>5k</item>
        <item>7k</item>
        <item>7.7k</item>
        <item>10k</item>
        <item>21k</item>
        <item>42k</item>
    </string-array>
    <string name="run_emoji">🏃</string>
    <string name="ride_emoji">🚲</string>
    <string name="swim_emoji">🏊</string>
    <string name="weight_training_emoji">🏋</string>
    <string name="rest_day_emoji">🏖 Rest day</string>
    <string name="empty_training">Error</string>
    <string name="statistics">Statistics</string>
    <string name="birth_date_label">Birth Date:</string>
</resources>